@@ -129,12 +129,14 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/pixmaps/pioneers.png
 %{_datadir}/pixmaps/pioneers/*
 %{_datadir}/games/pioneers/themes/*
-%{_datadir}/locale/es/LC_MESSAGES/pioneers.mo
+%{_datadir}/locale/af/LC_MESSAGES/pioneers.mo
 %{_datadir}/locale/de/LC_MESSAGES/pioneers.mo
+%{_datadir}/locale/es/LC_MESSAGES/pioneers.mo
 %{_datadir}/locale/fr/LC_MESSAGES/pioneers.mo
-%{_datadir}/locale/it/LC_MESSAGES/pioneers.mo
-%{_datadir}/locale/nl/LC_MESSAGES/pioneers.mo
 %{_datadir}/locale/hu/LC_MESSAGES/pioneers.mo
+%{_datadir}/locale/it/LC_MESSAGES/pioneers.mo
+%{_datadir}/locale/ja/LC_MESSAGES/pioneers.mo
+%{_datadir}/locale/nl/LC_MESSAGES/pioneers.mo
 %{_datadir}/locale/sv/LC_MESSAGES/pioneers.mo
 
 %files help
